<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">AGUILA</string>
    <string name="box_two">BULLDOG</string>
    <string name="box_three">ELEFANTE</string>
    <string name="box_four">PEZ</string>
    <string name="box_five">TIGRE</string>
    <string name="how_to_play">How to play:</string>
    <string name="tap_the_boxes_and_buttons">Tap the screen and buttons.</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
</resources>